[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["gleb165 <83755952+gleb165@users.noreply.github.com>"]
license = "IT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
email-validator = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
